--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
   </head>
   <body>
 
-    <!--Uncomment the line below and see what happens-->>
-    <!--<h1>Title</h1>-->
+    <!--Uncomment the line below and see what happens-->
+    <h1 style="color:darkseagreen; background-color: darkblue;"> Emma Magner</h1>
     
-    <!-- Write whatever you want here. -->
+    <img src="photo.jpeg" alt="picture of self">
+
+    <p> Emma likes food and fun! <br> She likes to 
+dance and sing. She's in an all female a cappella group at JMU and below is the link to 
+their website. </p>
+
+    <a href="https://thejmubluestones.weebly.com/"> The JMU BluesTones Website </a>
+
+    <p> She also really likes traveling and going on adventures.
+      <br> Last summer she studied abroad in London which is shown below: </p>
+
+    <img src="london.jpg" alt="london" width="300" height="200">
+
+    <p> One time for Halloween she was a powerpuff girl with her friends. She was Bubbles. Bubbles is the light blue one. <br>
+    That is why she chose to color this website light blue. </p>
 
   </body>
 </html>
