--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-
-    <!--Uncomment the line below and see what happens-->>
-    <!--<h1>Title</h1>-->
+    <style>h1 { text-align: center; }
+    p.pic {text-align: center }
+    body {background-color: lightgray;} 
+    </style>
     
-    <!-- Write whatever you want here. -->
+      <h1 style="color:darkgreen;"> Prayag Patel </h1> 
+      <p class ="pic"> <img src="Prayag_Patel Headshot.jpg" style="width:200px;height:200px";> </p> 
+      <p> Hello, My name is Prayag. I am an Intern at Unisys. My hobbies include being outside and exercising.
+      I also like Craft Beer. 
+
+      <a href="https://www.linkedin.com/in/prayag-patel-84955215b">LinkedIn</a>
+      </p>
+      <p>
+      Here are some recommondations.
+
+      <ul>
+        <li>Breckinridge Vanilla Porter </li>
+        <img src= "https://www.breckbrew.com/_photos/brews/Vanilla%20Porter%20-%20Refresh%2012oz%20BTL.png" style="width:200px;height:200px";>
+        <li>Sweetwater 420 IPA</li>
+        <img src= "https://images.ctfassets.net/qe08557i7rmu/VMq_aSsAACSR5SZv/1af54cf2084f2b4247c0af5e3562b7d2/35128ee27de78fb4b706eda5852f01ee0ef141b4_sweetwater-420-pale.jpg?w=900" style="width:200px;height:200px";>
+      </ul>
+      </p>
 
   </body>
 </html>
