Updated Website with link to resume

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
   </head>
   <body>
 
-    <!--Uncomment the line below and see what happens-->
+    <style>
+    a.fixed {
+      position: fixed;
+      right: 0;
+      top: 0;
+      border: 3px solid #73AD21;
+    } </style>
+    <a class="fixed" href="index2.html"> <img src="resumelogo.png" alt="link to resume" width="45" height="54"> </a>
+
     <h1 style="color:darkseagreen; background-color: darkblue;"> Emma Magner</h1>
-    
+     
     <img src="photo.jpeg" alt="picture of self">
 
     <p> Emma likes food and fun! <br> She likes to 
