--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <style>h1 { text-align: center; }
-    p.pic {text-align: center }
-    body {background-color: lightgray;} 
-    </style>
     
-      <h1 style="color:darkgreen;"> Prayag Patel </h1> 
-      <p class ="pic"> <img src="Prayag_Patel Headshot.jpg" style="width:200px;height:200px";> </p> 
-      <p> Hello, My name is Prayag. I am an Intern at Unisys. My hobbies include being outside and exercising.
+    <a class ="resume" href="Index2.html"><img src="images.png" style="width: 40px;height: 60pa";> </a> 
+    <h1 style="color:darkgreen;"> Prayag Patel </h1> 
+    <p class ="pic"> <img src="Prayag_Patel Headshot.jpg" style="width:200px;height:200px";> </p>
+    <p> Hello, My name is Prayag. I am an Intern at Unisys. My hobbies include being outside and exercising.
       I also like Craft Beer. 
 
       <a href="https://www.linkedin.com/in/prayag-patel-84955215b">LinkedIn</a>
