Finished website with link to resume

--- a/index2.html
+++ b/index2.html
@@ -15,9 +15,10 @@
 
     <b> Other Experience: </b> <br> 
     <ul>
-        <li> President/Treasurer/Member of The JMU BluesTones </li>
-        <li> Studied abroad in London for 4 weeks over the summer </li>
-        <li>  </li>
+        <li> President/Treasurer/Member of The JMU BluesTones - 2016-Present </li>
+        <li> Studied abroad in London for 4 weeks over the summer - May of 2017 </li>
+        <li> Volunteer to help rebuild houses in New Orleans - May-June of 2018 </li>
+        <li> Volunteer Ballet Teacher Assistent - 2013-2016 </li>
     </ul>
 
     <b> Programming Skills: </b> <br> 
@@ -26,9 +27,23 @@
         <li> Python </li>
         <li> C++ </li>
         <li> Latex </li>
+        <li> MATLAB </li>
     </ul>
 
-
+    <b> Mathematical Skills: </b> <br> 
+    <ul>
+        <li> Calculus </li>
+        <li> Algebra </li>
+        <li> Abstract Algebra </li>
+        <li> Linear Algebra </li>
+        <li> Statistics </li>
+        <li> Differential Equations </li>
+        <li> Fourier Analysis and Partial Differential Equations </li>
+        <li> Complex Variables </li>
+        <li> Geometry </li>
+        <li> Discrete Mathematics </li>
+        <li> Numerical Algorithms </li>
+    </ul>
 
   </body>
 </html> 
