--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script>
+    function showClock() {
+    var date = new Date();
+    var hr = date.getHours();
+    var min = date.getMinutes();
+    var sec = date.getSeconds();
+    var partOfDay = "AM";
+    
+    if (hr === 0) {
+        hr = 12;
+    }
+
+    if (hr > 12) {
+        hr = hr - 12;
+        partOfDay = "PM";
+    }
+
+    hr = (hr < 10) ? "0" + hr : hr;
+    min = (min < 10) ? "0" + min : min;
+    sec = (sec < 10) ? "0" + sec : sec;
+
+    document.getElementById('clock').innerHTML = hr + ":" + min + ":" + sec + " " + partOfDay;
+    var time = setTimeout(showClock, 1000);
+}
+</script>
   </head>
-  <body>
+  <body onload= "showClock()">
 
     <style>
     a.fixed {
@@ -31,6 +56,8 @@ their website. </p>
 
     <p> One time for Halloween she was a powerpuff girl with her friends. She was Bubbles. Bubbles is the light blue one. <br>
     That is why she chose to color this website light blue. </p>
+
+   <div id='clock' class="clock"></div> 
 
   </body>
 </html>
